# game-of-life

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
cgl/: CMakeLists.txt
cgl/include/cgl/: utils.h
cgl/shader/: cgl.comp  cgl.frag  cgl.vert
cgl/src/: main.cpp
